microservices-on-openshift/quarkus/product/argocd/kustomize/service/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    service: service
  type: ClusterIP
  sessionAffinity: None
