microservices-on-openshift/quarkus/product/argocd/kustomize/service/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: service
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
